fixed dropdown menu height on mobile view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -185,7 +185,7 @@ input.dropdown:checked ~ ul.navbar {
     background-color: #0000EC;
     position: absolute;
     margin: 30px 0 0 0;
-    height: 35%;
+    height: 37%;
     width: 100%;
 }
 
